--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "license": "MIT",
   "dependencies": {
     "copy-to-clipboard": "^3.2.0",
+    "prop-types": "^15.7.2",
     "qrcode": "^1.4.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
